<resources>
    <string name="app_name">First App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_world">Hello World!</string>
    <string name="parking_desc">This is an app for a parking lot</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edit_license">License Number</string>
    <string name="edit_car_color">Car Color</string>
    <string name="spot_number">Spot Number</string>
    <string name="button_park">Park</string>
    <string name="name_date">Brown, Lenny 4/17/20</string>
    <string name="parking_info_header">Your Parking Information</string>
</resources>
